--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,23 +1,22 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/ubuntu
 {
-	"name": "Ubuntu",
-	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/base:jammy",
-	"features": {
-		"ghcr.io/devcontainers/features/docker-outside-of-docker:1": {
-			"version": "latest",
-			"enableNonRootDocker": "true",
-			"moby": "true"
-		  },
-		"ghcr.io/devcontainers/features/node:1": {},
-		
+	"name": "Ubuntu PHP8.0",
+
+  "image": "mcr.microsoft.com/devcontainers/base:jammy",
+  "features": {
+    "ghcr.io/devcontainers/features/docker-outside-of-docker:1": {
+      "version": "latest",
+      "enableNonRootDocker": "true",
+      "moby": "true"
+    },
+    "ghcr.io/devcontainers/features/node:1": {},
     "ghcr.io/shyim/devcontainers-features/php:0": {
       "version": "8.0",
       "installComposer": "true"
     },
-		"ghcr.io/shyim/devcontainers-features/symfony-cli:0": {}
-	}
+    "ghcr.io/shyim/devcontainers-features/symfony-cli:0": {}
+  }
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
