--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,67 +1,67 @@
 services:
-  php:
-    container_name: php
-    build:
-      context: .
-      target: sylius_php_prod
-    depends_on:
-      - migrations
-    environment:
-      APP_DEBUG: 1
-      APP_ENV: dev
-      APP_SECRET: EDITME
-      DATABASE_URL: mysql://sylius:${MYSQL_PASSWORD}@mysql/sylius_dev
-      MAILER_URL: smtp://localhost
-      MESSENGER_TRANSPORT_DSN: doctrine://default
-      PHP_DATE_TIMEZONE: ${PHP_DATE_TIMEZONE:-UTC}
-    volumes:
-      # use a bind-mounted host directory, as we want to keep the sessions
-      - ./var/sessions:/srv/sylius/var/sessions:rw
-      # use a bind-mounted host directory, as we want to keep the media
-      - ./public/media:/srv/sylius/public/media:rw
-    networks:
-      - dev
+  # php:
+  #   container_name: php
+  #   build:
+  #     context: .
+  #     target: sylius_php_dev
+  #   depends_on:
+  #     - migrations
+  #   environment:
+  #     APP_DEBUG: 1
+  #     APP_ENV: dev
+  #     APP_SECRET: EDITME
+  #     DATABASE_URL: mysql://sylius:${MYSQL_PASSWORD}@mysql/sylius_dev
+  #     MAILER_URL: smtp://localhost
+  #     MESSENGER_TRANSPORT_DSN: doctrine://default
+  #     PHP_DATE_TIMEZONE: ${PHP_DATE_TIMEZONE:-UTC}
+  #   volumes:
+  #     # use a bind-mounted host directory, as we want to keep the sessions
+  #     - ./var/sessions:/srv/sylius/var/sessions:rw
+  #     # use a bind-mounted host directory, as we want to keep the media
+  #     - ./public/media:/srv/sylius/public/media:rw
+  #   networks:
+  #     - dev
 
-  cron:
-    container_name: cron
-    build:
-      context: .
-      target: sylius_cron
-    depends_on:
-      - migrations
-    environment:
-      APP_ENV: dev
-      APP_DEBUG: 1
-      APP_SECRET: EDITME
-      DATABASE_URL: mysql://sylius:${MYSQL_PASSWORD}@mysql/sylius_dev
-      PHP_DATE_TIMEZONE: ${PHP_DATE_TIMEZONE:-UTC}
-    networks:
-      - dev
+  # cron:
+  #   container_name: cron
+  #   build:
+  #     context: .
+  #     target: sylius_cron
+  #   depends_on:
+  #     - migrations
+  #   environment:
+  #     APP_ENV: dev
+  #     APP_DEBUG: 1
+  #     APP_SECRET: EDITME
+  #     DATABASE_URL: mysql://sylius:${MYSQL_PASSWORD}@mysql/sylius_dev
+  #     PHP_DATE_TIMEZONE: ${PHP_DATE_TIMEZONE:-UTC}
+  #   networks:
+  #     - dev
 
-  worker:
-    container_name: worker
-    command: ["php", "bin/console", "messenger:consume", "main", "catalog_promotion_removal", "--limit=5", "--memory-limit=256M", "--time-limit=600"]
-    restart: always
-    build:
-      context: .
-      target: sylius_php_prod
-    depends_on:
-      - migrations
-    environment:
-      APP_ENV: dev
-      APP_DEBUG: 1
-      APP_SECRET: EDITME
-      DATABASE_URL: mysql://sylius:${MYSQL_PASSWORD}@mysql/sylius_dev
-      MESSENGER_TRANSPORT_DSN: doctrine://default
-      PHP_DATE_TIMEZONE: ${PHP_DATE_TIMEZONE:-UTC}
-    networks:
-      - dev
+  # worker:
+  #   container_name: worker
+  #   command: ["php", "bin/console", "messenger:consume", "main", "catalog_promotion_removal", "--limit=5", "--memory-limit=256M", "--time-limit=600"]
+  #   restart: always
+  #   build:
+  #     context: .
+  #     target: sylius_php_dev
+  #   depends_on:
+  #     - migrations
+  #   environment:
+  #     APP_ENV: dev
+  #     APP_DEBUG: 1
+  #     APP_SECRET: EDITME
+  #     DATABASE_URL: mysql://sylius:${MYSQL_PASSWORD}@mysql/sylius_dev
+  #     MESSENGER_TRANSPORT_DSN: doctrine://default
+  #     PHP_DATE_TIMEZONE: ${PHP_DATE_TIMEZONE:-UTC}
+  #   networks:
+  #     - dev
 
   migrations:
     container_name: migrations
     build:
       context: .
-      target: sylius_migrations_prod
+      target: sylius_migrations_dev
     depends_on:
       - mysql
     environment:
@@ -89,21 +89,41 @@ services:
     networks:
       - dev
 
-  nginx:
-    container_name: nginx
-    # in production, we may want to use a static website hosting service
-    build:
-      context: .
-      target: sylius_nginx
-    depends_on:
-      - php
-    volumes:
-      # use a bind-mounted host directory, as we want to keep the media
-      - ./public/media:/srv/sylius/public/media:ro
-    networks:
-      - dev
-    ports:
-      - 80:80
+  # nginx:
+  #   container_name: nginx
+  #   # in production, we may want to use a static website hosting service
+  #   build:
+  #     context: .
+  #     target: sylius_nginx
+  #   depends_on:
+  #     - php
+  #   volumes:
+  #     # use a bind-mounted host directory, as we want to keep the media
+  #     - ./public/media:/srv/sylius/public/media:ro
+  #   networks:
+  #     - dev
+  #   ports:
+  #     - 80:80
+
+  # node:
+  #   container_name: node
+  #   build:
+  #     context: .
+  #     target: sylius_node
+  #   command: ["yarn", "watch"]
+  #   depends_on:
+  #     - php
+  #   environment:
+  #     - GULP_ENV=dev
+  #     - PHP_HOST=php
+  #     - PHP_PORT=9000
+  #   volumes:
+  #     - .:/srv/sylius:rw,cached
+  #     - ./public:/srv/sylius/public:rw,delegated
+  #   ports:
+  #     - "${NODE_PORT:-35729}:35729"
+  #   networks:
+  #     - dev
 
 ### Portainer ###########################################
   portainer:
